# QFS

./: .bandit  .gitignore  .pre-commit-config.yaml  AEGIS_SYSTEM_STATUS_REPORT.md  ATLAS-QFS-GAP-ANALYSIS.md  ATLAS_V14_WALKTHROUGH.md  AUDIT_RESULTS.json  AUDIT_RESULTS_SUMMARY.md  AUTONOMOUS_AUDIT_V2_IMPLEMENTATION.md  BASELINE_2519.txt  BOUNTIES.md  CERTIFICATION_V20.md  CHANGELOG.md  CHANGELOG_SESSIONS.md  CHANGELOG_V13.6.md  CI_STATUS_VERIFIED.md  COMMIT_SUMMARY.md  COMPLETION_SUMMARY.md  CONSTITUTIONAL_V13.5_TASK_TRACKER.md  CONTRIBUTING.md  CertifiedMath_master.py  DASHBOARD_IMPROVEMENTS_APPLIED.md  DEV_GUIDE.md  DISCORD_SETUP.md  DOC_STRUCTURE_OVERVIEW.md  Dockerfile  EXECUTIONV13.6.md  FIRST_TESTNET_DEPLOYMENT.md  FULL PHASE 3 AUDIT (VERIFIED LINE-BY-LIN.md  HEALTHCHECK_v16.1.1_COMPLETE.md  HOOK_VIOLATIONS_STATUS.md  HOW_TO_AUDIT_QFS_V15.md  LATEST_RELEASE.txt  LAYER_C_IMPLEMENTATION_COMPLETE.md  LAYER_D_ADVISORY_COMPLETE.md  LAYER_D_STATUS.md  LICENSE  LICENSE.ATLAS.md  LX INTEGRATION.md  MASTER-PLAN-ATLAS-X-QFS.md  (+202 more)
.github/: PULL_REQUEST_v16_INTEGRATION.md
archive/: BOUNTIES_v16.md  LATEST_RELEASE.txt  README.md  RELEASE_NOTES.md
audit/: CertifiedMath_AUDIT.md  CertifiedMath_Zero_Simulation_Audit_Guide.md  QFS_V13_AUDIT_COMPLIANCE_REPORT.md  agent_self_audit.json  audit_verification.py  certified_math_audit_report.json  phase_3_pqc_operation_hash.txt  phase_a_module_audit.py  post_v13_audit_plan.md  qfs_v13_audit_improvements.md  qfs_v13_autonomous_audit.py  qfs_v13_executive_summary.md  qfs_v13_final_summary.md  qfs_v13_technical_test_report.py  (+5 more)
(+2586 files in other folders)
